feat: Integrate DeepSeek and Pollinations logic into Cloudflare Worker

--- a/开发计划.md
+++ b/开发计划.md
@@ -93,6 +93,46 @@
 *   异步任务队列处理耗时生成（如果API调用非常慢）。
 *   更美观的UI设计。
 
+## 5. 部署计划 (Cloudflare Serverless 方案)
+
+为了实现项目的免费、高可用和全球加速部署，我们选择采用 Cloudflare 的 Serverless 平台。
+
+*   **前端部署**: 使用 **Cloudflare Pages**。
+    *   托管 `frontend/` 目录下的静态资源 (HTML, CSS, JavaScript)。
+    *   享受Cloudflare的全球CDN加速和自动HTTPS。
+*   **后端部署**: 使用 **Cloudflare Workers** (Python Workers)。
+    *   将原有的Flask后端API逻辑迁移到Python Worker中。
+    *   Worker负责处理前端的API请求，调用外部服务（如DeepSeek, Pollinations）。
+*   **数据存储 (按需)**:
+    *   **Cloudflare KV Store**: 可用于存储任务状态、配置信息或少量元数据（如果采用异步轮询方案）。
+    *   **Cloudflare R2**: 可用于存储生成的图片、音频等二进制大文件（如果需要持久化存储并对外提供访问链接）。
+
+### 5.1 初步实现思路 (思路1：Worker内同步处理)
+
+考虑到快速上线和验证核心功能，我们首先采用以下简化方案将后端迁移至Cloudflare Workers：
+
+*   **同步处理**:
+    *   前端发起的API请求（如文本优化、图片/语音生成），由Cloudflare Worker接收后，在**同一个请求的生命周期内同步调用**所有必要的外部API（DeepSeek, Pollinations）。
+    *   Worker等待外部API返回结果，然后将处理后的数据直接响应给前端。
+*   **移除Celery和Redis依赖**:
+    *   由于Cloudflare Workers本身不直接支持传统的消息队列和内存数据库（如Celery + Redis），在此初步方案中，我们将**暂停使用Celery进行异步任务处理**。
+    *   所有任务的执行都将是同步的。
+*   **优点**:
+    *   代码改动相对直接，主要集中在将Flask路由逻辑转换为Worker的请求处理逻辑。
+    *   能够快速验证核心功能在Cloudflare平台上的可行性。
+    *   部署流程相对简单。
+*   **潜在挑战与后续迭代方向**:
+    *   **请求超时风险**: 如果外部API调用耗时过长（超出Cloudflare Worker的执行时间限制），可能导致请求失败。
+    *   **用户体验**: 长时间同步等待可能影响用户体验。
+    *   如果实际测试中发现超时问题或用户体验不佳，我们将考虑迭代到**思路2：基于Cloudflare KV Store和前端轮询的异步处理方案**。该方案会重新引入异步处理模式，将耗时任务提交到后台（由Worker的 `event.waitUntil` 触发），前端通过轮询查询任务状态和结果。
+
+### 5.2 配置文件
+
+*   `wrangler.toml`: 用于配置Cloudflare Worker的构建、模块、环境变量绑定等。
+*   `cloudflare-pages.toml` (或在Cloudflare UI中配置): 用于配置Cloudflare Pages的构建和发布。
+
+(部署计划更新于 2024-05-17)
+
 ---
 **注：** 此计划会根据实际开发进度和遇到的问题动态调整。每次调整后，本文档将被更新。所有代码和命令将优先考虑Windows平台的兼容性。
 
