feat: 更新开发计划，添加后端JS Worker和SEO相关文件

--- a/开发计划.md
+++ b/开发计划.md
@@ -1,5 +1,7 @@
 # 项目开发计划 (MVP优先原则)
 
+**GitHub仓库地址：** [https://github.com/peyoba/Text2Image_audio](https://github.com/peyoba/Text2Image_audio)
+
 本文档遵循MVP（Minimum Viable Product，最小可行产品）优先的原则，旨在快速迭代，尽早交付核心价值。
 
 ## 0. 准备阶段：环境与基础设置
@@ -310,4 +312,38 @@
     *   Cloudflare Pages 正在对自定义域名进行验证和激活，预计需要一些时间生效。
 
 **下一步：**
-*   明日早上检查自定义域名 `nihilistic.dpdns.org` 是否已成功激活并可以正常访问前端应用。 
+*   生成并提交 XML Sitemap。
+
+### 5.7 XML 站点地图与 robots.txt (截至 2025-05-22 后续)
+
+为了优化搜索引擎索引 (SEO)，我们为网站生成并配置了 `sitemap.xml` 和 `robots.txt` 文件。
+
+1.  **生成 `sitemap.xml`**:
+    *   内容:
+      ```xml
+      <?xml version="1.0" encoding="UTF-8"?>
+      <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+        <url>
+          <loc>https://nihilistic.dpdns.org/</loc>
+          <lastmod>2025-05-22</lastmod>
+          <changefreq>weekly</changefreq>
+          <priority>1.0</priority>
+        </url>
+      </urlset>
+      ```
+    *   文件已创建于 `frontend/sitemap.xml`。
+
+2.  **生成 `robots.txt`**:
+    *   内容:
+      ```txt
+      User-agent: *
+      Allow: /
+      Sitemap: https://nihilistic.dpdns.org/sitemap.xml
+      ```
+    *   文件已创建于 `frontend/robots.txt`。
+
+3.  **部署方式**:
+    *   由于 Cloudflare Pages 项目 (`text2image-frontend`) 当前采用手动上传部署，这两个新文件 (`sitemap.xml`, `robots.txt`) 以及更新后的 `开发计划.md` 需要被手动下载并上传到 Cloudflare Pages 以更新网站。
+
+4.  **后续手动操作**:
+    *   在文件成功部署并通过 `https://nihilistic.dpdns.org/sitemap.xml` 和 `https://nihilistic.dpdns.org/robots.txt` 可访问后，需将站点地图 URL 提交给 Google Search Console 和 Bing Webmaster Tools 等搜索引擎站长平台。 
