Clean up legacy Python files and directories from backend

--- a/开发计划.md
+++ b/开发计划.md
@@ -346,4 +346,30 @@
     *   由于 Cloudflare Pages 项目 (`text2image-frontend`) 当前采用手动上传部署，这两个新文件 (`sitemap.xml`, `robots.txt`) 以及更新后的 `开发计划.md` 需要被手动下载并上传到 Cloudflare Pages 以更新网站。
 
 4.  **后续手动操作**:
-    *   在文件成功部署并通过 `https://nihilistic.dpdns.org/sitemap.xml` 和 `https://nihilistic.dpdns.org/robots.txt` 可访问后，需将站点地图 URL 提交给 Google Search Console 和 Bing Webmaster Tools 等搜索引擎站长平台。 
+    *   在文件成功部署并通过 `https://nihilistic.dpdns.org/sitemap.xml` 和 `https://nihilistic.dpdns.org/robots.txt` 可访问后，需将站点地图 URL 提交给 Google Search Console 和 Bing Webmaster Tools 等搜索引擎站长平台。
+
+### 5.8 前端自动化部署配置 (截至 2025-05-23)
+
+为了解决原先手动上传前端文件到 Cloudflare Pages 效率低下的问题，我们成功配置了基于 Git 的自动化部署流程。
+
+1.  **问题诊断**:
+    *   原有的 Cloudflare Pages 项目 (`text2image-frontend`) 是以"直接上传"模式创建的，不支持直接切换到 Git 集成以实现自动部署。
+
+2.  **解决方案与实施**:
+    *   **创建新 Pages 项目**: 在 Cloudflare 上创建了一个全新的 Pages 项目，命名为 `text2image-frontend-git`。
+    *   **连接到 Git**: 在创建过程中，将此新项目连接到 GitHub 仓库 `https://github.com/peyoba/Text2Image_audio` 的 `main` 分支。
+    *   **配置构建设置**: 
+        *   根据项目根目录下的 `cloudflare-pages.toml` 文件，生产分支设置为 `main`。
+        *   构建命令设置为空 (`command = ""`)，因为前端是纯静态文件。
+        *   构建输出目录明确设置为 `frontend` (`publish = "frontend"`)。
+    *   新创建的 `text2image-frontend-git` 项目通过其 `*.pages.dev` 地址 (`https://text2image-frontend-git.pages.dev`) 验证部署成功。
+
+3.  **自定义域名指向更新**:
+    *   经确认，自定义域名 `nihilistic.dpdns.org` 的流量是由一个名为 `proxy-nihilistic-frontend` 的 Cloudflare Worker 路由的。
+    *   **修改代理 Worker**: 编辑了 `proxy-nihilistic-frontend` Worker 的代码，将其中的目标 Pages 项目 URL (`pagesProjectUrl`) 从指向旧的 `text2image-frontend.pages.dev` 更改为指向新创建的 `https://text2image-frontend-git.pages.dev`。
+    *   成功部署了修改后的 `proxy-nihilistic-frontend` Worker。
+
+4.  **成果与当前状态**:
+    *   自定义域名 `https://nihilistic.dpdns.org` 现在通过 `proxy-nihilistic-frontend` Worker 成功从新的、Git 集成的 `text2image-frontend-git` Pages 项目加载前端内容。
+    *   实现了前端代码的自动化部署：任何推送到 GitHub 仓库 `main` 分支的更改，都会自动触发 Cloudflare Pages 构建和部署新的前端版本，并通过代理 Worker实时更新到主域名。
+    *   后续，旧的"直接上传"模式的 Pages 项目 (`text2image-frontend`) 可以在确认新流程稳定后考虑删除。 
