--- a/需求文档.md
+++ b/需求文档.md
@@ -17,7 +17,7 @@
 **不包含功能 (初期版本):**
 *   用户账户系统。
 *   历史记录保存。
-*   高级参数调整（如图片风格、语音音色、模型选择等）。
+*   前端直接提供的高级参数调整（如图片风格、模型选择）。*注：部分参数如语音音色/语速已可通过后端环境变量配置。*
 *   付费功能。
 
 ### 1.3 目标用户
@@ -110,14 +110,17 @@
 *   尽可能优化后端处理，减少等待时间。
 
 #### 3.3.3 错误处理
-*   系统应能优雅处理各种预期和意外错误（如MCP服务不可用、返回错误、网络问题等）。
+*   系统应能优雅处理各种预期和意外错误（如外部API服务不可用、返回错误、网络问题等）。
+    *   **实现细节**: 后端对外部API的调用实现了**自动重试机制**（最多3次），以应对瞬时网络或服务抖动，提高了操作的成功率。
 *   向用户提供有意义的错误提示，而不是原始的技术错误信息。
+    *   **实现细节**: 后端对可预见的错误（如API密钥缺失）返回了**标准化的HTTP错误码和JSON错误体**，前端能够据此向用户显示精确、友好的错误信息。
 
 #### 3.3.4 兼容性
 *   Web前端应优先保证在最新版本的Chrome、Firefox、Edge等主流现代桌面浏览器上正常工作。
 
 #### 3.3.5 安全性 (基本)
-*   对用户输入进行基本的校验和清理，防止简单的注入风险（虽然主要依赖MCP的安全性）。
+*   对用户输入进行基本的校验和清理，防止简单的注入风险。
+*   **实现细节**: 敏感信息（如 `DEEPSEEK_API_KEY`）通过**环境变量**进行管理，避免了将密钥硬编码在代码中，增强了安全性。
 
 ## 4. Pollinations API 接口依赖 (基于 `pollinations_README.md` 及公开API)
 
